argocd/prometheus/app_monitoring_namespace.yaml
---

kind: Namespace
apiVersion: v1
metadata:
  name: monitoring
  labels:
    name: monitoring
