argocd/prometheus/app_monitoring_traefik.yaml
---

apiVersion:               traefik.containo.us/v1alpha1
kind:                     Middleware
metadata:
  name:                   prometheus-redirect
  namespace:              "monitoring"
spec:
  redirectScheme:
    scheme:               https
    permanent:            true

---


apiVersion:               traefik.containo.us/v1alpha1
kind:                     IngressRoute
metadata:
  name:                   "https-prometheus"
  namespace:              "monitoring"
spec:
  entryPoints:
    -                     websecure
  routes:
    - match:              "Host(`prometheus.olaf-radicke.de`)"
      kind:               Rule
      services:
      - name:             prometheus-server 
        port:             80
  tls:
    certResolver:         le
    options:
      name:               "m-tls-options-prometheus"
      namespace:          "monitoring"

---

apiVersion:               traefik.containo.us/v1alpha1
kind:                     IngressRoute
metadata:
  name:                   "http-prometheus"
  namespace:              "monitoring"
spec:
  entryPoints:
    -                     web
  routes:
    - match:              "Host(`prometheus.olaf-radicke.de`)"
      kind:               Rule
      services:
      - name:             prometheus-server 
        port:             80
      middlewares:
      - name:             prometheus-redirect
        namespace:        "monitoring"
